--- a/src/views/layout/main.hbs
+++ b/src/views/layout/main.hbs
@@ -22,7 +22,7 @@
     {{/block}}
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/vendor.js"></script>
+    <script type="module" src="/js/vendor.js"></script>
     <script>
         // Fallback for browsers that don't support preload
         if (!('relList' in document.createElement('link'))) {
@@ -158,7 +158,8 @@
     }
 </script>
 
-<script src="/js/trudesk.min.js"></script>
+<script type="module" src="/js/vendor.js"></script>
+<script type="module" src="/js/app.js"></script>
 
 </body>
 
