--- a/src/views/login-otp.hbs
+++ b/src/views/login-otp.hbs
@@ -152,8 +152,8 @@
     </style>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/vendor.js"></script>
-    <script src="/js/truRequire.js"></script>
+    <script type="module" src="/js/vendor.js"></script>
+    <!-- truRequire заменен на глобальные переменные -->
     <!--<script src="/js/trudesk.min.js"></script>-->
 </head>
 <body>
@@ -193,9 +193,20 @@
 </div>
 
 <script type="text/javascript">
-    window.truRequire(['jquery', 'helpers'], function(loadedModules) {
-        var $ = loadedModules[0];
-        var helpers = loadedModules[1];
+    // Ждем загрузки глобальных переменных
+    function waitForGlobals() {
+        if (window.$ && window.jQuery && window.$.fn) {
+            console.log('Глобальные переменные загружены в login-otp');
+            initApp();
+        } else {
+            console.log('Ждем загрузки глобальных переменных в login-otp...');
+            setTimeout(waitForGlobals, 100);
+        }
+    }
+    
+    function initApp() {
+        var $ = window.$ || window.jQuery;
+        var helpers = window.helpers;
         helpers.UI.inputs();
         helpers.UI.waves();
 
@@ -253,7 +264,10 @@
         setTimeout(function() {
             $('input#code').focus();
         }, 600);
-    });
+    }
+    
+    // Запускаем ожидание глобальных переменных
+    waitForGlobals();
 </script>
 </body>
 </html>
