--- a/src/views/pub_signup.hbs
+++ b/src/views/pub_signup.hbs
@@ -216,8 +216,8 @@
     </style>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/vendor.js"></script>
-    <script src="/js/truRequire.js"></script>
+    <script type="module" src="/js/vendor.js"></script>
+    <!-- truRequire заменен на глобальные переменные -->
 </head>
 <body>
 <svg version="1.1" id="logosvg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -393,10 +393,21 @@
 
 
 <script type="text/javascript">
-    window.truRequire(['jquery', 'snackbar', 'helpers'], function(loadedModules) {
-        var $ = loadedModules[0];
-        window.Snackbar = loadedModules[1];
-        var helpers = loadedModules[2];
+    // Ждем загрузки глобальных переменных
+    function waitForGlobals() {
+        if (window.$ && window.jQuery && window.$.fn) {
+            console.log('Глобальные переменные загружены в pub_signup');
+            initApp();
+        } else {
+            console.log('Ждем загрузки глобальных переменных в pub_signup...');
+            setTimeout(waitForGlobals, 100);
+        }
+    }
+    
+    function initApp() {
+        var $ = window.$ || window.jQuery;
+        var Snackbar = window.Snackbar;
+        var helpers = window.helpers;
 
         $(document).ready(function() {
             helpers.init();
@@ -734,7 +745,10 @@
 
 
         });
-    });
+    }
+    
+    // Запускаем ожидание глобальных переменных
+    waitForGlobals();
 </script>
 </body>
 </html>
